module two assignment

--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Hello Coursera!</title>
-</head>
+<style type="text/css">
+	h1{
+		text-align: center;
+	}
+</style>
 <body>
-<h1>Hello Coursera! web develpment course.</h1>
+<h1>Our menu</h1>
+<p></p>
 </body>
 </html>
