module two assignment finished

--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,10 +1,55 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Module Two Assignment</title>
 	<link rel="stylesheet" type="text/css" href="stylesheets.css">
 </head>
 <body>
-<h1>Kruthendar Reddy</h1>
+<h1>Our Menu</h1>
+<div class="container">
+	<div class="row">
+		<div class="col-lrg-4">
+			<div class="item">
+				<div class="item-title" id="title-one">
+					<h3>Chicken</h3>
+				</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				</p>
+			</div>
+		</div>
+		<div class="col-lrg-4">
+			<div class="item">
+				<div class="item-title" id="title-two">
+					<h3>Mutton</h3>
+				</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				</p>
+			</div>
+		</div>
+		<div class="col-lrg-4 col-lrg-tablet">
+			<div class="item">
+				<div class="item-title" id="title-three">
+					<h3>Fish</h3>
+				</div>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+				tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+				quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+				consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+				cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+				</p>
+			</div>
+		</div>	
+	</div>
+</div>
 </body>
 </html>
